# epicsdev_magnetometer

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: epicsdev_magetometer_pp.py
docs/: AI_prompt
epicsdev_magnetometer/: __main__.py  lakeshore.py  scan.py
